# Arithmetic_01

./: .gitignore  README.md  pyproject.toml
prompting/: Arithmetic_Git_GitHub_프롬프팅_기록.md  Arithmetic_프로젝트_프롬프팅_정리.md  README.md
report/: Arithmetic_01_작업보고서.md
src/arithmetic/: __init__.py  __main__.py  main.py
src/arithmetic/domain/: __init__.py  exceptions.py  operation.py  operations.py
src/arithmetic/io/: __init__.py  console_reader.py  console_writer.py
tests/: test_operations.py
